# smart_nic

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
docs/: tutorial.md  users_guide.md
driver/: CMakeLists.txt
driver/examples/: echo_server.cpp
driver/include/nic_driver/: driver.h  mmio_adapter.h  packet_router.h  rdma_types.h
driver/src/: driver.cpp  mmio_adapter.cpp  packet_router.cpp
include/nic/: admin_queue.h  bar.h  capability.h  checksum.h  completion_queue.h  config_space.h  descriptor_ring.h  device.h  dma_engine.h  dma_types.h  doorbell.h  error_injector.h  flow_control.h  host_memory.h  interrupt_dispatcher.h  log.h  mailbox.h  msix.h  nic.h  offload.h  packet_generator.h  pcie_formats.h  pf_vf_manager.h  ptp_clock.h  ptp_timestamper.h  queue_manager.h  queue_pair.h  register.h  register_formats.h  rss.h  sgl.h  simple_host_memory.h  stats_collector.h  trace.h  tx_rx.h  version.h  vf_device.h  virtual_function.h
include/nic/rocev2/: completion_queue.h  congestion.h  cqe.h  engine.h  formats.h  memory_region.h  packet.h  protection_domain.h  queue_pair.h  rdma_read.h  rdma_write.h  send_recv.h  types.h  wqe.h
src/: admin_queue.cpp  checksum.cpp  completion_queue.cpp  config_space.cpp  descriptor_ring.cpp  device.cpp  dma_engine.cpp  dma_types.cpp  doorbell.cpp  error_injector.cpp  flow_control.cpp  interrupt_dispatcher.cpp  mailbox.cpp  msix.cpp  packet_generator.cpp  pf_vf_manager.cpp  ptp_clock.cpp  ptp_timestamper.cpp  queue_manager.cpp  queue_pair.cpp  register.cpp  rss.cpp  simple_host_memory.cpp  stats_collector.cpp  trace.cpp  vf_device.cpp  virtual_function.cpp
src/rocev2/: completion_queue.cpp  congestion.cpp  engine.cpp  memory_region.cpp  packet.cpp  protection_domain.cpp  queue_pair.cpp  rdma_read.cpp  rdma_write.cpp  send_recv.cpp
tests/: CMakeLists.txt  bar_test.cpp  config_space_coverage_test.cpp  config_space_test.cpp  coverage_test.cpp  device_smoke_test.cpp  device_test.cpp  dma_host_test.cpp  error_injector_test.cpp  flow_control_test.cpp  interrupt_dispatcher_test.cpp  mailbox_test.cpp  pcie_formats_test.cpp  pf_vf_manager_test.cpp  ptp_clock_test.cpp  ptp_timestamper_test.cpp  queue_manager_rss_test.cpp  register_coverage_test.cpp  register_formats_test.cpp  register_test.cpp  stats_collector_test.cpp  telemetry_admin_test.cpp  tutorial_lesson1_test.cpp  tutorial_lesson2_test.cpp  tutorial_lesson3_test.cpp  tutorial_lesson4_test.cpp  tutorial_lesson5_test.cpp  tutorial_lesson6_test.cpp  tutorial_lesson7_test.cpp  tutorial_lesson8_test.cpp  tx_rx_test.cpp  validation_test.cpp  vf_device_test.cpp  virtual_function_test.cpp
tests/driver/: CMakeLists.txt  driver_coverage_test.cpp  driver_integration_test.cpp  rdma_loopback_test.cpp
tests/rocev2/: congestion_test.cpp  engine_coverage_test.cpp  integration_test.cpp  memory_region_test.cpp  packet_test.cpp  pd_congestion_coverage_test.cpp  queue_pair_coverage_test.cpp  queue_pair_test.cpp  read_test.cpp  reliability_test.cpp  send_recv_test.cpp  write_test.cpp
